--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,3 +1,8 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 .main {
   display: flex;
   flex-direction: column;
@@ -6,7 +11,7 @@
   padding: 6rem;
   min-height: 100vh;
 }
-
+ 
 .description {
   display: inherit;
   justify-content: inherit;
@@ -276,3 +281,4 @@
     transform: rotate(0deg);
   }
 }
+
