--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,6 +3,10 @@
 @tailwind utilities;
 
 
-
+@layer components {
+    .searchFilter__Button {
+        @apply px-4 py-2 hover:shadow-lg border rounded-full hover:cursor-pointer active:scale-95 active:bg-gray-100 transition transform duration-100 ease-out;
+    }
+}
 
 
